# x-agent

./: .gitignore  README.md  pyproject.toml  run.py
configs/: nagi.yaml  vertex.yaml
docs/: 2026-03-10_persona_genesis_process.md  2026-03-10_vertex_account_setup.md  2026-03-11_nagi_memory_drift_plan.md  x-agent-operations-guide.md
personas/nagi/: SOUL.md  origin.yaml  psyche.yaml  value_matrix.yaml  voice.yaml
personas/vertex/: SOUL.md  origin.yaml  psyche.yaml  value_matrix.yaml  voice.yaml
scripts/: _auto_cookie_extract.py  enable_ssh.ps1  extract_cookies_direct.py  install_service.ps1  nagi_diary_viewer.py  setup_all.ps1  setup_cookies.py
src/: nagi_memory.py  x_agent.py  x_agent_browser.py
tests/: test_challenge_detection.py
