[project]
name = "x-agent"
version = "0.1.0"
description = "Autonomous X/Twitter agent with persona-driven engagement"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "anthropic>=0.40",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 100
